# MT

./: .gitignore  Architecture.md  README.md  docker-compose.yml  example_output.json  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/node-container/: devcontainer.json
.devcontainer/python-container/: devcontainer.json
app/: main.py  worker.py
app/api/: api.py
app/api/api_v1/: upload.py
app/crud/: __init__.py  crud_card.py  crud_restaurant.py
app/schema/: __init__.py  card.py  deck.py
app/services/: index.py  qdrant.py  reduct.py  s3.py
app/utils/: config.py  deps.py
node-src/: .gitignore  README.md  env.d.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  vite.config.ts
node-src/src/: App.vue  global.d.ts  main.ts  supabase.ts  validation.ts
node-src/src/assets/: main.css
node-src/src/components/: Auth.vue  Basic.vue  CardInput.vue  DeckInput.vue  DeckRow.vue  DeckTable.vue  ElInput.vue  ElTextarea.vue  FileDrop.vue  LessonRow.vue  LessonTable.vue  NavBar.vue  Output.vue  index.ts
node-src/src/data/: Deck.json
node-src/src/guards/: auth.ts
node-src/src/helpers/: AbstractApiService.ts  (+3 more)
python-src/: main.py  pyproject.toml  requirements.txt
python-src/api/: api.py
python-src/api/api_v1/: restaurants.py
python-src/crud/: __init__.py  crud_base.py  crud_card.py  crud_restaurant.py
python-src/schema/: card.py  deck.py
python-src/services/: index.py  qdrant.py  s3.py  test_bucket.py
python-src/utils/: config.py  deps.py
(+34 files in other folders)
