[project]
name = "mt"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Butch78", email = "matthewtyleraylward@hotmail.com" }
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0.post1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
